# clique-cover

./: .gitignore  ;  README.md  TODO  compose-backup.yml  compose.yml  docker-compose.yml
algo_launcher/: Cargo.toml
algo_launcher/src/: main.rs
algorithms/base/: Dockerfile
algorithms/base/rust_wrapper/: Cargo.toml
algorithms/base/rust_wrapper/src/: main.rs
graph_generation/rust_wrapper/: Cargo.toml
public/: index.html  index.js
server/: Cargo.toml  Dockerfile
server/src/: algonet.rs  grafnet.rs  main.rs  settings.rs  types.rs  website.rs
shared_rust/: Cargo.toml  Dockerfile
shared_rust/src/: lib.rs  message.rs  types.rs
