[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared_rust" }
bincode = "1.3"
dashmap = "6.1"
futures-util = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
tower-http = { version = "0.6.1", features = ["fs"] }
twox-hash = "2.0"
