[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[features]
default = ["server"]
client = ["websocket"]
server = ["axum", "tokio"]

[dependencies]
# shared deps
anyhow = "1.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# client deps
websocket = { version = "0.27", optional = true }

# server deps
axum = { version = "0.7", optional = true, features = ["ws"] }
tokio = { version = "1", optional = true, features = ["full"] }
